--- a/css/style.css
+++ b/css/style.css
@@ -481,8 +481,8 @@
 
     .boxxx {
     
-      height: 160px;
-      width: 160px;
+      height: 90%;
+      width: 90%;
       margin: 2%;
     }
   
